# kuka_idf

./: .project  README.md
kuka_control/: CMakeLists.txt  kuka_control_plugins.xml  package.xml
kuka_control/config/: gravity_comp_control.yaml  simulation_controllers.yaml  simulation_controllers1.yaml  simulation_controllers_elfin.yaml  simulation_controllers_single_joint.yaml
kuka_control/include/kuka_control/: effort_joint_interface_melodic.h
kuka_control/launch/: demo_cell.launch  demo_kr6.launch  demo_kr6_cell.launch  elfin3_empty_world.launch  elfin_gravity_comp_control.launch  gravity_comp_control.launch  kuka_gazebo.launch  robot.launch  rviz.launch
kuka_control/launch/rviz/: gazebo.rviz  kuka.rviz
kuka_control/models/: ft_tool.xacro  ft_tool_real.xacro
kuka_control/models/box/: box.urdf.xacro  box.xacro
kuka_control/models/brida/: brida.urdf.xacro
kuka_control/models/camera/: asus_camera.urdf.xacro  camera.urdf.xacro  camera_4kinects.urdf.xacro  camera_manfrotto.urdf.xacro  kinect_camera.urdf.xacro
kuka_control/models/car_door/: car_door.urdf.xacro  car_door_alone.xacro
kuka_control/models/car_door/meshes/: VITO_puerta_izq.blend  VITO_puerta_izq.blend1  VITO_puerta_izq.dae  VITO_puerta_izq.mtl  VITO_puerta_izq.stl  car_VITO.dae  car_VITO.mtl  car_door_mod_pruebas.blend
kuka_control/models/cell/: cell.urdf.xacro  cell.xacro
kuka_control/models/cell/meshes/: AgilusStructure.blend  (+4 more)
kuka_control/models/ft_sensor/: ft_sensor_ati.gazebo.xacro  ft_sensor_ati.urdf.xacro
kuka_control/models/manfrotto/: manfrotto.xacro
kuka_control/models/realsense/: realsense_d435.urdf.xacro  realsense_d435.xacro
kuka_control/models/tool/: tool.urdf.xacro  tool.xacro
kuka_control/scripts/: kr6_control.py  kr6_hololens.py
kuka_control/src/: gravity_comp_controller.cpp  joint_trajectory_controller.cpp
kuka_description/launch/: description.launch  rviz.launch
kuka_description/urdf/: kr6r900sixx.gazebo.xacro  kr6r900sixx.urdf.xacro  kr6r900sixx_macro.xacro
kuka_gazebo/launch/: empty_world.launch
kuka_teleop/: README.md  package.xml
kuka_teleop/config/: gamepad.yaml  hololens.yaml
kuka_teleop/launch/: teleop_hololens.launch
kuka_teleop/src/: kuka_hololens.cpp
